fix: increased margin top of main heading on small screens

--- a/styles.css
+++ b/styles.css
@@ -399,9 +399,8 @@ hr {
     display: flex;
     flex-wrap: wrap;
     height: 60vh;
-    margin-top: 2.5rem;
+    margin-top: 4rem;
     padding: 0.3rem;
-    width: 100vh;
   }
   .home__heading--one {
     color: rgb(39, 38, 38);
